[gd_scene load_steps=2 format=3 uid="uid://bap0cbh4ox2ji"]

[ext_resource type="Script" path="res://scripts/start_menu.gd" id="1_hrfd8"]

[node name="StartMenu" type="CanvasLayer"]
script = ExtResource("1_hrfd8")

[node name="Panel" type="Panel" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/HBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Main Title" type="Label" parent="Panel/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.262745, 0.694118, 0.827451, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 4
theme_override_constants/shadow_offset_y = 4
theme_override_font_sizes/font_size = 100
text = "CITIZENDEW"

[node name="Lower Title" type="Label" parent="Panel/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.109804, 0.384314, 0.462745, 1)
theme_override_font_sizes/font_size = 25
text = "ajanky game"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Start New" type="Button" parent="Panel/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.109804, 0.384314, 0.462745, 1)
theme_override_colors/font_hover_color = Color(0.262745, 0.694118, 0.827451, 1)
theme_override_font_sizes/font_size = 50
text = "START NEW"

[node name="Load" type="Button" parent="Panel/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.109804, 0.384314, 0.462745, 1)
theme_override_colors/font_hover_color = Color(0.262745, 0.694118, 0.827451, 1)
theme_override_font_sizes/font_size = 50
text = "LOAD"

[node name="Quit" type="Button" parent="Panel/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.133333, 0.447059, 0.537255, 1)
theme_override_colors/font_hover_color = Color(0.262745, 0.694118, 0.827451, 1)
theme_override_font_sizes/font_size = 50
text = "QUIT"

[connection signal="pressed" from="Panel/HBoxContainer/VBoxContainer/Start New" to="." method="_on_start_new_pressed"]
[connection signal="pressed" from="Panel/HBoxContainer/VBoxContainer/Load" to="." method="_on_load_pressed"]
[connection signal="pressed" from="Panel/HBoxContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
